<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_48dp"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/findWithGPS"
        android:icon="@drawable/ic_baseline_gps_fixed_48"
        android:title="@string/locate"
        android:contentDescription="@string/content_description_findWithGPS"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/elderlyMode"
        android:icon="@drawable/ic_baseline_emoji_people_48"
        android:title="@string/change"
        android:contentDescription="@string/content_description_changeModeToSeniorMode"
        app:showAsAction="ifRoom" />

</menu>